--- a/res/layout/menu_child_elements.xml
+++ b/res/layout/menu_child_elements.xml
@@ -1,6 +1,6 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/textView1"
+    android:id="@+id/about_text"
     android:layout_width="wrap_content"
     android:layout_height="60dp"
     android:layout_marginLeft="5dp"
