--- a/res/layout/menu_parent_elements.xml
+++ b/res/layout/menu_parent_elements.xml
@@ -14,7 +14,7 @@
         android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/about_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
