--- a/res/layout/fragment_main_screen.xml
+++ b/res/layout/fragment_main_screen.xml
@@ -30,7 +30,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/place_an_order" />
 
     <Button
@@ -41,7 +41,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/about_us_text" />
 
     <Button
@@ -52,7 +52,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/special_offers_text" />
+    <Button
+        android:id="@+id/directions_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/special_offers_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/directions_text" />
 
 </RelativeLayout>
