--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -2,11 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" android:measureWithLargestChild="true">
+    android:measureWithLargestChild="true"
+    android:orientation="vertical" >
 
-            <ExpandableListView
-                android:id="@+id/list"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:groupIndicator="@null" />   
+    <ExpandableListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:groupIndicator="@null" />
+
+
 </LinearLayout>
