--- a/res/layout/menu_child_elements.xml
+++ b/res/layout/menu_child_elements.xml
@@ -1,4 +1,4 @@
-<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/about_text"
     android:layout_width="wrap_content"
