delivery section added

--- a/res/layout/fragment_checkout.xml
+++ b/res/layout/fragment_checkout.xml
@@ -29,4 +29,13 @@
         android:focusable="true"
         android:text="Order" />
 
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/order_item_price"
+        android:entries="@array/quanity_choice"
+         />
+
 </RelativeLayout>
