--- a/res/menu/fragment_checkout.xml
+++ b/res/menu/fragment_checkout.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_checkout"
+        android:id="@+id/menu_place_order"
         android:icon="@android:drawable/ic_menu_add"
         android:showAsAction="withText|ifRoom"
-        android:title="@string/checkout"/>
+        android:title="@string/place_order"/>
 
 </menu>
