can update quanity and remove items

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer-array name="quanity_choice">[1,2,3]</integer-array>
+    <string-array name="quantity_choice">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
 </resources>
