--- a/res/layout/fragment_checkout.xml
+++ b/res/layout/fragment_checkout.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="24dp"
         android:text="TextView" />
 
     <TextView
@@ -19,23 +20,19 @@
         android:layout_centerHorizontal="true"
         android:text="TextView" />
 
-    <CheckBox
-        android:id="@+id/order_item_ordered"
+    <Spinner
+        android:id="@+id/quantity_choice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-         android:enabled="true"
-        android:focusable="true"
-        android:text="Order" />
+        android:layout_alignParentTop="true" />
 
-    <Spinner
-        android:id="@+id/spinner1"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/remove_from_order"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/order_item_price"
-        android:entries="@array/quanity_choice"
-         />
+        android:layout_below="@id/order_item_name" 
+        android:layout_marginTop="24dp"
+        android:text="Remove Item"/>
 
 </RelativeLayout>
