--- a/res/drawable/button_text_color.xml
+++ b/res/drawable/button_text_color.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="false" android:color="#ffffff"/>
-    <item android:state_pressed="true" android:color="#ffffff"/>
+    <item android:state_pressed="true" android:color="#6697A6"/>
 
 </selector>
