--- a/res/layout/fragment_main_screen.xml
+++ b/res/layout/fragment_main_screen.xml
@@ -1,46 +1,66 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_screen_background" >
+    android:background="@drawable/white"
+    android:orientation="vertical" >
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/dominos" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/layout1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/papa" />
-
-        <Button
-            android:id="@+id/order_button"
-            style="@style/MenuButton"
-            android:text="@string/menu_label" />
+        android:layout_below="@id/imageView1"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal" >
 
         <Button
             android:id="@+id/about_button"
             style="@style/MenuButton"
+            android:layout_marginRight="24dp"
             android:text="@string/about_label" />
 
         <Button
             android:id="@+id/special_offers_button"
             style="@style/MenuButton"
             android:text="@string/special_offers_text" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/layout1"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/contact_button"
+            style="@style/MenuButton"
+            android:layout_marginRight="24dp"
+            android:text="@string/call_us_text" />
 
         <Button
             android:id="@+id/directions_button"
             style="@style/MenuButton"
             android:text="@string/directions_text" />
-
-        <Button
-            android:id="@+id/contact_button"
-            style="@style/MenuButton"
-            android:text="@string/call_us_text" />
     </LinearLayout>
 
-    
+    <Button
+        android:id="@+id/order_button"
+        style="@style/MenuButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:text="@string/menu_label"
+        android:textSize="48sp" />
 
-</ScrollView>
+</RelativeLayout>
