--- a/res/layout/menu_child_elements.xml
+++ b/res/layout/menu_child_elements.xml
@@ -4,5 +4,6 @@
     
     android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
     android:textSize="17sp" 
-    android:gravity="center_vertical"/>
+    android:gravity="center_vertical"
+    android:textColor="#ffffff"/>
     
