--- a/res/layout/menu_parent_elements.xml
+++ b/res/layout/menu_parent_elements.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     
-    style="@style/ListButton"
-    android:background="#949973"
+    android:background="#88255254"
     android:paddingLeft="40dp"
     tools:context=".MenuActivity" >
 
