--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -18,12 +18,9 @@
     </style>
 
     <style name="MenuButton">
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginRight">16dp</item>
-        <item name="android:layout_marginLeft">16dp</item>
-        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:layout_width">120dp</item>
+        <item name="android:layout_height">120dp</item>
+        <item name="android:layout_marginTop">24dp</item>
         <item name="android:shadowColor">#A8A8A8</item>
         <item name="android:shadowDx">3</item>
         <item name="android:shadowDy">0</item>
@@ -37,19 +34,18 @@
 
     
     <style name="CustomTheme" parent="android:Theme.Holo">
-        <item name="android:windowBackground">@@drawable/main_screen_background</item>
-        <item name="android:colorBackground">@drawable/main_screen_background</item>
+        <item name="android:windowBackground">@drawable/white</item>
+        <item name="android:colorBackground">@drawable/white</item>
         <item name="android:actionBarStyle">@style/MyActionBar</item>
     </style>
 
     <style name="MyActionBar" parent="@android:style/Widget.Holo.ActionBar">
-        <item name="android:background">@drawable/green_gradient_color</item>
+        <item name="android:background">@drawable/blue_gradient_color</item>
     </style>
 
     <style name="ListButton" parent="MenuButton">
         <item name="android:background">@drawable/button_shape_corner</item>
         <item name="android:textColor">@drawable/button_text_color</item>
-        <item name="android:textColor">#000000</item>
     </style>
 
 </resources>
