--- a/res/layout/fragment_main_screen.xml
+++ b/res/layout/fragment_main_screen.xml
@@ -1,7 +1,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_screen_background" >
+    android:background="@drawable/main_screen_background"
+    tools:context=".MainScreenFragment" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,7 +42,5 @@
             style="@style/MenuButton"
             android:text="@string/call_us_text" />
     </LinearLayout>
-
-    
 
 </ScrollView>
