--- a/res/layout/fragment_delivery.xml
+++ b/res/layout/fragment_delivery.xml
@@ -11,8 +11,8 @@
         android:background="@drawable/editbox_dropdown_background_dark"
         android:ems="10"
         android:hint="Full Name"
-        android:inputType="textPersonName" 
-        android:textSize="24sp">
+        android:inputType="textPersonName"
+        android:textSize="24sp" >
 
         <requestFocus />
     </EditText>
@@ -24,8 +24,8 @@
         android:background="@drawable/editbox_dropdown_background_dark"
         android:ems="10"
         android:hint="Address"
-        android:inputType="textPostalAddress" 
-        android:textSize="24sp"/>
+        android:inputType="textPostalAddress"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/delivery_phone"
@@ -34,8 +34,18 @@
         android:background="@drawable/editbox_dropdown_background_dark"
         android:ems="10"
         android:hint="Phone Number"
-        android:inputType="phone" 
-        android:textSize="24sp"/>
+        android:inputType="phone"
+        android:textSize="24sp" />
+
+    <EditText
+        android:id="@+id/delivery_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/editbox_dropdown_background_dark"
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/delivery_instructions"
@@ -43,14 +53,37 @@
         android:layout_height="wrap_content"
         android:background="@drawable/editbox_dropdown_background_dark"
         android:ems="10"
-        android:hint="Special Instructions" 
-        android:textSize="24sp"/>
+        android:hint="Special Instructions"
+        android:textSize="24sp" />
+
+        <RadioGroup
+            android:id="@+id/radio_group_delivery"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" 
+            android:gravity="center"
+            android:background="@drawable/editbox_dropdown_background_dark">
+
+            <RadioButton
+                android:id="@+id/radio_carry_out"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="Carry Out" 
+                android:layout_marginRight="48dp"/>
+
+            <RadioButton
+                android:id="@+id/radio_delivery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delivery" />
+        </RadioGroup>
 
     <Button
-        style="@style/MenuButton"
         android:id="@+id/place_order"
+        style="@style/MenuButton"
         android:layout_gravity="center_horizontal"
-        android:text="@string/place_order" 
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:text="@string/place_order" />
 
 </LinearLayout>
